<RelativeLayout style="@style/AuthBackground"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="jwile14.com.github.ribbit.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:src="@mipmap/background"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"
        android:text="@string/subtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/AuthEditText"/>

        <EditText
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:id="@+id/signupButton"
        android:text="@string/sign_up_button_label"
        style="@style/AuthButton"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_toStartOf="@id/buttonDivider"/>

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        style="@style/AuthButton"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_toEndOf="@id/buttonDivider"/>

    <ProgressBar
        android:id="@+id/signupProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/signupButton"
        android:layout_alignLeft="@id/signupButton"
        android:layout_alignStart="@id/signupButton"
        android:layout_alignRight="@id/signupButton"
        android:layout_alignEnd="@id/signupButton"
        android:layout_alignTop="@id/signupButton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
